--- a/BreakIn/juego2D/juego2D.vcxproj
+++ b/BreakIn/juego2D/juego2D.vcxproj
@@ -19,6 +19,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Element.h" />
+    <ClInclude Include="Misil.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Police.h" />
     <ClInclude Include="Scene.h" />
@@ -37,6 +38,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Misil.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Police.cpp" />
     <ClCompile Include="Scene.cpp" />
