--- a/BreakIn/juego2D/juego2D.vcxproj.filters
+++ b/BreakIn/juego2D/juego2D.vcxproj.filters
@@ -158,4 +158,29 @@
     <Media Include="audio\level1.mp3" />
     <Media Include="audio\selection.mp3" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="fonts\OpenSans-SemiboldItalic.ttf" />
+    <Font Include="fonts\OpenSans-Semibold.ttf" />
+    <Font Include="fonts\OpenSans-Regular.ttf" />
+    <Font Include="fonts\OpenSans-LightItalic.ttf" />
+    <Font Include="fonts\OpenSans-Italic.ttf" />
+    <Font Include="fonts\OpenSans-ExtraBoldItalic.ttf" />
+    <Font Include="fonts\OpenSans-ExtraBold.ttf" />
+    <Font Include="fonts\OpenSans-BoldItalic.ttf" />
+    <Font Include="fonts\OpenSans-Bold.ttf" />
+    <Font Include="fonts\DroidSerif-Italic.ttf" />
+    <Font Include="fonts\DroidSerif-BoldItalic.ttf" />
+    <Font Include="fonts\DroidSerif-Bold.ttf" />
+    <Font Include="fonts\DroidSerif.ttf" />
+    <Font Include="fonts\OpenSans-Light.ttf" />
+    <Font Include="fonts\LemonMilk.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="fonts\open-sans.zip" />
+    <None Include="fonts\Droid_Serif.zip" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="fonts\LICENSE.txt" />
+    <Text Include="fonts\Apache License.txt" />
+  </ItemGroup>
 </Project>
